--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint src/*.js"
+    "lint": "npx eslint src/*.js",
+    "lint:fix": "npx eslint --fix src/App.jsx",
+    "format": "prettier -w ."
   },
   "eslintConfig": {
     "extends": [
@@ -37,7 +39,14 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.33.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.8.4"
   }
 }
