--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -16,8 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint src/*.js",
-    "lint:fix": "npx eslint --fix src/App.jsx",
+    "lint": "npx eslint src/*.jsx src/**/*.jsx",
+    "lint:fix": "npx eslint --fix src/*.jsx src/**/*.jsx",
     "format": "prettier -w ."
   },
   "eslintConfig": {
