--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -18,8 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint src/*.jsx src/**/*.jsx",
-    "lint:fix": "npx eslint --fix src/*.jsx src/**/*.jsx",
+    "lint": "npx eslint src/*.jsx src/**/*.jsx src/**/**/*.jsx",
+    "lint:fix": "npx eslint --fix src/*.jsx src/**/*.jsx src/**/**/*.jsx",
     "format": "prettier -w ."
   },
   "eslintConfig": {
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
